<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.NestedScrollView

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="400dp"
    android:background="@color/bottomSheetColor"
    android:fillViewport="true"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="@string/bottom_sheet_behavior">


    <RelativeLayout
        android:id="@+id/search_edit_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.SearchView
            android:id="@+id/searchQuery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorWhite"
            android:inputType="textCapWords"
            android:queryBackground="@string/add_your_courses_hint"
            app:queryHint="@string/searchview_hint">

        </android.support.v7.widget.SearchView>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:id="@+id/courseName_selected"
            android:textColor="@color/colorBlack"
            android:layout_centerHorizontal="true"
            android:hint="@string/courseName_hint"
            android:ellipsize="end"
            android:maxLines="1"
            android:layout_marginStart="16sp"
            android:textSize="20sp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:id="@+id/divider2"
            android:layout_below="@+id/courseName_selected"
            android:background="?android:attr/dividerHorizontal"/>

        <ListView
            android:id="@+id/schedule_for_course"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/searchQuery"
            android:layout_marginBottom="56dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:nestedScrollingEnabled="true"
            android:scrollbarSize="3dp"
            android:scrollbarStyle="outsideOverlay"
            android:fastScrollEnabled="true"
            android:fastScrollAlwaysVisible="true"
            android:scrollbars="vertical"
            android:scrollingCache="true"
            android:smoothScrollbar="true"
            android:visibility="gone">

        </ListView>

        <ListView
            android:id="@+id/list_all_courses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/searchQuery"
            android:layout_marginBottom="56dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:nestedScrollingEnabled="true"
            android:scrollbarSize="3dp"
            android:fastScrollEnabled="true"
            android:fastScrollAlwaysVisible="true"
            android:scrollbarStyle="outsideOverlay"
            android:scrollbars="vertical"
            android:scrollingCache="true"
            android:smoothScrollbar="true">

        </ListView>

        <Button
            android:id="@+id/button_submit"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/submit"
            android:textSize="21sp" />
    </RelativeLayout>
</android.support.v4.widget.NestedScrollView>